--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     android:background="@drawable/corner_background">
 
-    <!-- Название приложения -->
     <TextView
         android:id="@+id/app_title"
         android:layout_width="wrap_content"
@@ -20,7 +19,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
-    <!-- Панель управления -->
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/topAppBar"
         android:layout_width="match_parent"
@@ -30,7 +28,6 @@
         app:menu="@menu/menu_toolbar"
         style="@style/Widget.MaterialComponents.Toolbar.Primary" />
 
-    <!-- Карточки с изображениями -->
     <androidx.cardview.widget.CardView
         android:id="@+id/topMenu"
         android:layout_width="match_parent"
@@ -82,7 +79,6 @@
 
     </androidx.cardview.widget.CardView>
 
-    <!-- TextView с источником -->
     <TextView
         android:id="@+id/source_text"
         android:layout_width="wrap_content"
@@ -113,7 +109,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <!-- Первое изображение -->
         <androidx.cardview.widget.CardView
             android:layout_width="130dp"
             android:layout_height="180dp"
@@ -127,7 +122,6 @@
                 android:scaleType="centerCrop"/>
         </androidx.cardview.widget.CardView>
 
-        <!-- Второе изображение -->
         <androidx.cardview.widget.CardView
             android:layout_width="130dp"
             android:layout_height="180dp"
@@ -141,7 +135,6 @@
                 android:scaleType="centerCrop"/>
         </androidx.cardview.widget.CardView>
 
-        <!-- Третье изображение -->
         <androidx.cardview.widget.CardView
             android:layout_width="130dp"
             android:layout_height="180dp"
@@ -155,7 +148,6 @@
                 android:scaleType="centerCrop"/>
         </androidx.cardview.widget.CardView>
 
-        <!-- Четвертое изображение -->
         <androidx.cardview.widget.CardView
             android:layout_width="130dp"
             android:layout_height="180dp"
@@ -173,7 +165,6 @@
 
 
 
-    <!-- BottomNavigation -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
@@ -182,7 +173,7 @@
         app:menu="@menu/menu_navigation"
         app:itemIconTint="@color/bottom_nav_selected"
         app:itemTextColor="@color/bottom_nav_unselected"
-        android:background="@color/bottom_nav_background"
+        android:background="#1858A2"
         app:labelVisibilityMode="labeled" />
 
 
