--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -93,74 +93,18 @@
         android:textSize="14sp"
         app:layout_constraintTop_toBottomOf="@id/topMenu"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/gridLayout"/>
+        app:layout_constraintEnd_toEndOf="@id/main_recycler"/>
 
-    <GridLayout
-        android:id="@+id/gridLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/main_recycler"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_margin="16dp"
-        android:columnCount="2"
-        android:orientation="horizontal"
-        android:layoutAnimation="@anim/card_layout_animation"
-        android:useDefaultMargins="true"
         app:layout_constraintTop_toBottomOf="@+id/source_text"
         app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="130dp"
-            android:layout_height="180dp"
-            app:cardCornerRadius="15dp"
-            android:layout_margin="8dp"
-            android:stateListAnimator="@animator/poster_click_animation">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/duna"
-                android:scaleType="centerCrop"/>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="130dp"
-            android:layout_height="180dp"
-            app:cardCornerRadius="15dp"
-            android:layout_margin="8dp"
-            android:stateListAnimator="@animator/poster_click_animation">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/forsazh"
-                android:scaleType="centerCrop"/>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="130dp"
-            android:layout_height="180dp"
-            app:cardCornerRadius="15dp"
-            android:layout_margin="8dp"
-            android:stateListAnimator="@animator/poster_click_animation">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/djentelmenu"
-                android:scaleType="centerCrop"/>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="130dp"
-            android:layout_height="180dp"
-            app:cardCornerRadius="15dp"
-            android:layout_margin="8dp"
-            android:stateListAnimator="@animator/poster_click_animation">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/odindoma"
-                android:scaleType="centerCrop"/>
-        </androidx.cardview.widget.CardView>
-    </GridLayout>
 
 
 
