--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,16 +1,24 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!-- res/values/colors.xml -->
 <resources>
+    <!-- Основные цвета -->
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <!-- Цвета для светлой темы -->
+    <color name="primaryColor">#0077FF</color>
+    <color name="onPrimaryColor">#FFFFFF</color>
+    <color name="backgroundColor">#FFFFFF</color>
 
+    <!-- Цвета для темной темы -->
+    <color name="primaryColorDark">#0055CC</color>
+    <color name="onPrimaryColorDark">#FFFFFF</color>
+    <color name="backgroundColorDark">#222222</color>
+
+    <!-- Остальные цвета -->
     <color name="bottom_nav_background">#0077FF</color>
     <color name="bottom_nav_selected">#FFFFFFFF</color>
-    <color name="bottom_nav_unselected">#FFFFFFFF</color>
-
-
+    <color name="bottom_nav_unselected">#888888</color>
     <color name="app_title_color">#FFFFFF</color>
     <color name="source_link_color">#FF5722</color>
     <color name="visited_link_color">#FF9800</color>
-
 </resources>
