--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,123 +2,55 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/corner_background">
+    android:background="@drawable/corner_background"
+    tools:context=".ui.activity.MainActivity">
 
-    <TextView
-        android:id="@+id/app_title"
-        android:layout_width="wrap_content"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:textColor="@color/app_title_color"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent">
 
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/topAppBar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/bottom_nav_background"
-        app:layout_constraintTop_toBottomOf="@id/app_title"
-        app:menu="@menu/menu_toolbar"
-        style="@style/Widget.MaterialComponents.Toolbar.Primary" />
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/topMenu"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_margin="10dp"
-        app:cardCornerRadius="15dp"
-        android:elevation="5dp"
-        app:layout_constraintTop_toBottomOf="@id/topAppBar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <LinearLayout
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/topAppBar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="?attr/actionBarSize"
+            android:visibility="visible"
+            android:background="@color/bottom_nav_background"
+            app:title="@string/app_name"
+            app:navigationIcon="@drawable/round_menu"
+            app:menu="@menu/menu_toolbar"
+            style="@style/Widget.MaterialComponents.Toolbar.Primary"
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:scaleType="centerCrop"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                app:srcCompat="@drawable/poster_1" />
 
-            <ImageView
-                android:id="@+id/imageView2"
-                android:scaleType="centerCrop"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                app:srcCompat="@drawable/poster_2" />
+            app:contentInsetLeft="0dp"
+            app:contentInsetStart="0dp"
+            app:contentInsetRight="0dp"
+            app:contentInsetEnd="0dp" />
 
-            <ImageView
-                android:id="@+id/imageView3"
-                android:scaleType="centerCrop"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                app:srcCompat="@drawable/poster_3" />
+    </com.google.android.material.appbar.AppBarLayout>
 
-            <ImageView
-                android:id="@+id/imageView4"
-                android:scaleType="centerCrop"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                app:srcCompat="@drawable/poster_4" />
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-
-    <TextView
-        android:id="@+id/source_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Картинки взяты с https://poster4.me/"
-        android:autoLink="web"
-        android:linksClickable="true"
-        android:textColor="#181717"
-        android:textColorLink="#00BCD4"
-        android:textColorHighlight="@color/visited_link_color"
-        android:padding="16dp"
-        android:textSize="14sp"
-        app:layout_constraintTop_toBottomOf="@id/topMenu"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/main_recycler"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/main_recycler"
-        android:layout_width="0dp"
+    <FrameLayout
+        android:id="@+id/fragment_placeholder"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/source_text"
+        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
         app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-
-
-
+        android:background="@android:color/white" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:menu="@menu/menu_navigation"
+        android:background="#1858A2"
         app:itemIconTint="@color/bottom_nav_selected"
         app:itemTextColor="@color/bottom_nav_unselected"
-        android:background="#1858A2"
-        app:labelVisibilityMode="labeled" />
-
+        app:labelVisibilityMode="labeled"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/menu_navigation" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
